// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscribe component 1`] = `
<div>
  this is data
</div>
`;

exports[`subscribe component with changed stream 1`] = `
<div>
  this is data
</div>
`;

exports[`subscribe component with changed stream 2`] = `
<div>
  this is another data
</div>
`;

exports[`useStream hook with changed stream 1`] = `
<div>
  this is data
</div>
`;

exports[`useStream hook with changed stream 2`] = `
<div>
  this is another data
</div>
`;

exports[`useStream hook with suspense and no initialValue 1`] = `
<div>
  this is data
</div>
`;

exports[`useStream hook without suspense and with initialValue 1`] = `
<div>
  this is initial value
</div>
`;

exports[`useStream hook without suspense and with initialValue 2`] = `
<div>
  this is data
</div>
`;
